--- a/localstorage_01.html
+++ b/localstorage_01.html
@@ -6,6 +6,7 @@
     <title>Document</title>
 </head>
 <body>
+    <button onclick="count()">test </button>
     <script src="localstorage_01.js"></script>
 </body>
 </html>
